Add drill render color. fix drill item name, recipes,.

--- a/src/main/resources/assets/excavator/lang/en_us.json
+++ b/src/main/resources/assets/excavator/lang/en_us.json
@@ -1,4 +1,8 @@
 {
+    "entity.excavator.excavator_minecart": "Excavator",
     "item.excavator.excavator_minecart": "Minecart with Excavator",
-    "entity.excavator.excavator_minecart": "Excavator"
+    "item.excavator.excavator_drill_iron": "Excavator Iron Drill",
+    "item.excavator.excavator_drill_gold": "Excavator Gold Drill",
+    "item.excavator.excavator_drill_diamond": "Excavator Diamond Drill",
+    "item.excavator.excavator_drill_netherite": "Excavator Netherite Drill"
 }
